fix: make prepare & prepublish universal

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build && npm run build:types",
-    "prepublishOnly": "npm run build"
+    "prepare": "tsup && tsup --dts",
+    "prepublishOnly": "tsup"
   },
   "repository": {
     "type": "git",
