--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "next-umami",
   "author": "Gianluca De Marchi - hi@gixnluca.dev",
-  "version": "0.0.4",
+  "version": "0.0.41", 
   "license": "MIT",
   "files": [
     "dist"
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs", 
+      "require": "./dist/index.js"
+    }
+  },
+  "type": "module",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -31,6 +39,11 @@
     "nextjs",
     "analytics"
   ],
+  "peerDependencies": {
+    "next": ">=13.0.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
+  },
   "devDependencies": {
     "@types/node": "^20.14.14",
     "@types/react": "^18.0.37",
@@ -42,6 +55,9 @@
     "ts-node": "^10.9.1",
     "tsup": "^8.2.4",
     "typescript": "^5.2.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "prettier": {
     "bracketSpacing": true,
