chore: rename package to temp

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-umami",
+  "name": "next-umami-temp",
   "author": "Gianluca De Marchi - hi@gixnluca.dev",
   "version": "0.0.5", 
   "license": "MIT",
